--- a/mysql-deployment.yaml
+++ b/mysql-deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: mysql-zabbix
 spec:
   ports:
-  - port: 10051
+  - port: 3306
   selector:
     app: mysql
   clusterIP: None
@@ -31,17 +31,18 @@ spec:
           # Use secret in real usage
         - name: MYSQL_ROOT_PASSWORD
           value: root_pwd
-        - name: DB_SERVER_HOST
-          value: mysql-server
         - name: MYSQL_DATABASE
           value: zabbix
         - name: MYSQL_USER
           value: zabbix
         - name: MYSQL_PASSWORD
           value: zabbix_pwd
+        ags:
+          - --character-set-server=utf8
+          - --collation-server=utf8_bin
         ports:
-        - containerPort: 10051
-          name: mysql
+        - containerPort: 3306
+       #   name: mysql
         volumeMounts:
         - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
