--- a/mysql-deployment.yaml
+++ b/mysql-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-zabbix
+  name: mysql-zabbix-v2
 spec:
   ports:
   - port: 3306
@@ -12,7 +12,7 @@ spec:
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: mysql-zabbix
+  name: mysql-zabbix-v2
 spec:
   selector:
     matchLabels:
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - image: mysql:5.7
-        name: zabbix-server-mysql
+        name: zabbix-server-mysql-v2
         env:
           # Use secret in real usage
         - name: MYSQL_ROOT_PASSWORD
